--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -28,6 +28,8 @@ sphinx:
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
-   install:
-   - requirements: 
-    - sphinx-book-theme
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
